# personal-site

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  data.json  flake.nix  fly.toml  justfile  tailwind.config.js
.github/workflows/: deploy.yml  test.yml
app/: Cargo.toml  build.rs
app/src/: canvas_grid.rs  hooks.rs  lib.rs  log_js_trait.rs  style.rs  wgpu_renderer.rs
app/src/components/: canvas_header.rs  mod.rs  photo_grid.rs
app/src/content/: photo.md
app/src/shaders/: display.wgsl  simulate.wgsl
blog/: crud_can_be_fun.md
frontend/src/: lib.rs
grid/: Cargo.toml
grid/src/: lib.rs  parse.rs
liquid/: Cargo.toml
liquid/src/: lib.rs
list-bucket/: Cargo.toml
list-bucket/src/: lib.rs
photo-search/: Cargo.toml
photo-search/src/: lib.rs
photogrid/: Cargo.toml
photogrid/src/: lib.rs
server/: Cargo.toml
server/src/: bucket.rs  fileserv.rs  main.rs
style/: main.css
