[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
photogrid = { path = "../photogrid" }
grid = { path = "../grid" }
wasm-bindgen = { workspace = true }
liquid = { path = "../liquid" }
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
web-sys = { version = "=0.3.70", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
] }
streaming-iterator = "0.1.9"
poline-rs = { git = "https://github.com/seanaye/poline-rs" }
num-traits = "0.2.19"
gloo = "0.11.0"
log.workspace = true
leptos-use = { version = "0.14.0-beta1" }
colorsys = "0.6.7"
rand = "0.8.5"
serde_cbor = "0.11.2"
photo-search = { version = "0.1.0", path = "../photo-search" }

[features]
default = []
hydrate = [
  "leptos/hydrate",
  # "leptos_meta/hydrate",
  # "leptos_router/hydrate",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
  "leptos-use/ssr",
  "leptos-use/axum",
]
