[package]
name = "app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
js-sys = "0.3"
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
log.workspace = true

liquid = { path = "../liquid" }
web-sys = { version = "0.3.74", features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Storage',
  'Window',
] }
photogrid = { path = "../photogrid" }
grid = { path = "../grid" }
streaming-iterator = "0.1.9"
poline-rs = { git = "https://github.com/seanaye/poline-rs" }
num-traits = "0.2.19"
gloo = "0.11.0"
colorsys = "0.6.7"
rand = "0.8.5"
photo-search = { version = "0.1.0", path = "../photo-search" }
url = "2.5.2"
pulldown-cmark = "0.12"
wgpu = { version = "24", features = ["webgpu", "webgl"], optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "dep:wgpu",
  "dep:bytemuck",
  "dep:wasm-bindgen-futures",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_axum",
]
