[package]
name = "grid"
version = "0.1.0"
edition = "2021"

[features]
parse = ["dep:nom", "dep:anyhow"]


[dependencies]
num = "0.4.3"
serde = { version = "1.0.208", features = ["derive"] }
nom = { version = "7", optional = true }
anyhow = { version = "1", optional = true }


[dev-dependencies]
cool_asserts = "2.0.3"
